gen/LanguageParser.py
# Generated from /home/dantipov/PycharmProjects/Compilers/Language.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "';'", "','", "'{'", "'}'", 
                     "'='", "'.'", "'||'", "'V'", "'&&'", "'|'", "'!'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'if'", "'else'", 
                     "'while'", "'read'", "'write'", "'writeln'", "'return'", 
                     "'void'", "'int'", "'bool'", "'str'", "'long'", "'float'", 
                     "'double'", "'union'", "'thread'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "VoidType", "IntType", "BoolType", 
                      "StringType", "LongType", "FloatType", "DoubleType", 
                      "UnionType", "Thread", "Integer", "String", "Bool", 
                      "Long", "Float", "Double", "CompOp", "LowerName", 
                      "UpperName", "CommentText", "WS" ]

    RULE_program = 0
    RULE_function = 1
    RULE_functionDeclaration = 2
    RULE_functionDefinition = 3
    RULE_funcType = 4
    RULE_varType = 5
    RULE_arguments = 6
    RULE_argument = 7
    RULE_block = 8
    RULE_thread = 9
    RULE_command = 10
    RULE_varDeclaration = 11
    RULE_unionDeclaration = 12
    RULE_unionField = 13
    RULE_assignment = 14
    RULE_expression = 15
    RULE_andExpr = 16
    RULE_compExpr = 17
    RULE_arithmExpr = 18
    RULE_summand = 19
    RULE_castedMul = 20
    RULE_mul = 21
    RULE_var = 22
    RULE_funcCall = 23
    RULE_callArguments = 24
    RULE_treadCall = 25
    RULE_condition = 26
    RULE_cycle = 27
    RULE_read = 28
    RULE_write = 29
    RULE_returnValue = 30
    RULE_comment = 31

    ruleNames =  [ "program", "function", "functionDeclaration", "functionDefinition", 
                   "funcType", "varType", "arguments", "argument", "block", 
                   "thread", "command", "varDeclaration", "unionDeclaration", 
                   "unionField", "assignment", "expression", "andExpr", 
                   "compExpr", "arithmExpr", "summand", "castedMul", "mul", 
                   "var", "funcCall", "callArguments", "treadCall", "condition", 
                   "cycle", "read", "write", "returnValue", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    VoidType=26
    IntType=27
    BoolType=28
    StringType=29
    LongType=30
    FloatType=31
    DoubleType=32
    UnionType=33
    Thread=34
    Integer=35
    String=36
    Bool=37
    Long=38
    Float=39
    Double=40
    CompOp=41
    LowerName=42
    UpperName=43
    CommentText=44
    WS=45

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.FunctionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.FunctionContext,i)


        def thread(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ThreadContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ThreadContext,i)


        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CommandContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CommandContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CommentContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CommentContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.T__4) | (1 << LanguageParser.T__18) | (1 << LanguageParser.T__20) | (1 << LanguageParser.T__21) | (1 << LanguageParser.T__22) | (1 << LanguageParser.T__23) | (1 << LanguageParser.T__24) | (1 << LanguageParser.VoidType) | (1 << LanguageParser.IntType) | (1 << LanguageParser.BoolType) | (1 << LanguageParser.StringType) | (1 << LanguageParser.LongType) | (1 << LanguageParser.FloatType) | (1 << LanguageParser.DoubleType) | (1 << LanguageParser.UnionType) | (1 << LanguageParser.Thread) | (1 << LanguageParser.LowerName) | (1 << LanguageParser.UpperName) | (1 << LanguageParser.CommentText))) != 0):
                self.state = 68
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 65
                    self.thread()
                    pass

                elif la_ == 3:
                    self.state = 66
                    self.command()
                    pass

                elif la_ == 4:
                    self.state = 67
                    self.comment()
                    pass


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(LanguageParser.FunctionDeclarationContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(LanguageParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = LanguageParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.state = 75
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.functionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.functionDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(LanguageParser.FuncTypeContext,0)


        def LowerName(self):
            return self.getToken(LanguageParser.LowerName, 0)

        def arguments(self):
            return self.getTypedRuleContext(LanguageParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = LanguageParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.funcType()
            self.state = 78
            self.match(LanguageParser.LowerName)
            self.state = 79
            self.match(LanguageParser.T__0)
            self.state = 80
            self.arguments()
            self.state = 81
            self.match(LanguageParser.T__1)
            self.state = 82
            self.match(LanguageParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(LanguageParser.FuncTypeContext,0)


        def LowerName(self):
            return self.getToken(LanguageParser.LowerName, 0)

        def arguments(self):
            return self.getTypedRuleContext(LanguageParser.ArgumentsContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = LanguageParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.funcType()
            self.state = 85
            self.match(LanguageParser.LowerName)
            self.state = 86
            self.match(LanguageParser.T__0)
            self.state = 87
            self.arguments()
            self.state = 88
            self.match(LanguageParser.T__1)
            self.state = 89
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(LanguageParser.VarTypeContext,0)


        def VoidType(self):
            return self.getToken(LanguageParser.VoidType, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_funcType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncType" ):
                listener.enterFuncType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncType" ):
                listener.exitFuncType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncType" ):
                return visitor.visitFuncType(self)
            else:
                return visitor.visitChildren(self)




    def funcType(self):

        localctx = LanguageParser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcType)
        try:
            self.state = 93
            token = self._input.LA(1)
            if token in [LanguageParser.IntType, LanguageParser.BoolType, LanguageParser.StringType, LanguageParser.LongType, LanguageParser.FloatType, LanguageParser.DoubleType]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.varType()

            elif token in [LanguageParser.VoidType]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(LanguageParser.VoidType)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntType(self):
            return self.getToken(LanguageParser.IntType, 0)

        def BoolType(self):
            return self.getToken(LanguageParser.BoolType, 0)

        def StringType(self):
            return self.getToken(LanguageParser.StringType, 0)

        def LongType(self):
            return self.getToken(LanguageParser.LongType, 0)

        def FloatType(self):
            return self.getToken(LanguageParser.FloatType, 0)

        def DoubleType(self):
            return self.getToken(LanguageParser.DoubleType, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = LanguageParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.IntType) | (1 << LanguageParser.BoolType) | (1 << LanguageParser.StringType) | (1 << LanguageParser.LongType) | (1 << LanguageParser.FloatType) | (1 << LanguageParser.DoubleType))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ArgumentContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = LanguageParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.state = 106
            token = self._input.LA(1)
            if token in [LanguageParser.T__1]:
                self.enterOuterAlt(localctx, 1)


            elif token in [LanguageParser.IntType, LanguageParser.BoolType, LanguageParser.StringType, LanguageParser.LongType, LanguageParser.FloatType, LanguageParser.DoubleType]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.argument()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LanguageParser.T__3:
                    self.state = 99
                    self.match(LanguageParser.T__3)
                    self.state = 100
                    self.argument()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(LanguageParser.VarTypeContext,0)


        def LowerName(self):
            return self.getToken(LanguageParser.LowerName, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = LanguageParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.varType()
            self.state = 109
            self.match(LanguageParser.LowerName)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CommandContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CommandContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LanguageParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LanguageParser.T__4)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.T__4) | (1 << LanguageParser.T__18) | (1 << LanguageParser.T__20) | (1 << LanguageParser.T__21) | (1 << LanguageParser.T__22) | (1 << LanguageParser.T__23) | (1 << LanguageParser.T__24) | (1 << LanguageParser.IntType) | (1 << LanguageParser.BoolType) | (1 << LanguageParser.StringType) | (1 << LanguageParser.LongType) | (1 << LanguageParser.FloatType) | (1 << LanguageParser.DoubleType) | (1 << LanguageParser.UnionType) | (1 << LanguageParser.LowerName) | (1 << LanguageParser.UpperName))) != 0):
                self.state = 112
                self.command()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(LanguageParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ThreadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Thread(self):
            return self.getToken(LanguageParser.Thread, 0)

        def UpperName(self):
            return self.getToken(LanguageParser.UpperName, 0)

        def arguments(self):
            return self.getTypedRuleContext(LanguageParser.ArgumentsContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_thread

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThread" ):
                listener.enterThread(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThread" ):
                listener.exitThread(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThread" ):
                return visitor.visitThread(self)
            else:
                return visitor.visitChildren(self)




    def thread(self):

        localctx = LanguageParser.ThreadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_thread)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(LanguageParser.Thread)
            self.state = 121
            self.match(LanguageParser.UpperName)
            self.state = 122
            self.match(LanguageParser.T__0)
            self.state = 123
            self.arguments()
            self.state = 124
            self.match(LanguageParser.T__1)
            self.state = 125
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(LanguageParser.VarDeclarationContext,0)


        def unionDeclaration(self):
            return self.getTypedRuleContext(LanguageParser.UnionDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(LanguageParser.AssignmentContext,0)


        def condition(self):
            return self.getTypedRuleContext(LanguageParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(LanguageParser.CycleContext,0)


        def read(self):
            return self.getTypedRuleContext(LanguageParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(LanguageParser.WriteContext,0)


        def returnValue(self):
            return self.getTypedRuleContext(LanguageParser.ReturnValueContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(LanguageParser.FuncCallContext,0)


        def treadCall(self):
            return self.getTypedRuleContext(LanguageParser.TreadCallContext,0)


        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = LanguageParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_command)
        try:
            self.state = 154
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.varDeclaration()
                self.state = 128
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.unionDeclaration()
                self.state = 131
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.assignment()
                self.state = 134
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.condition()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.cycle()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.read()
                self.state = 139
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.write()
                self.state = 142
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 144
                self.returnValue()
                self.state = 145
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 147
                self.funcCall()
                self.state = 148
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 150
                self.treadCall()
                self.state = 151
                self.match(LanguageParser.T__2)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 153
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(LanguageParser.VarTypeContext,0)


        def LowerName(self):
            return self.getToken(LanguageParser.LowerName, 0)

        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = LanguageParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.varType()
            self.state = 157
            self.match(LanguageParser.LowerName)
            self.state = 160
            _la = self._input.LA(1)
            if _la==LanguageParser.T__6:
                self.state = 158
                self.match(LanguageParser.T__6)
                self.state = 159
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UnionType(self):
            return self.getToken(LanguageParser.UnionType, 0)

        def LowerName(self):
            return self.getToken(LanguageParser.LowerName, 0)

        def unionField(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.UnionFieldContext)
            else:
                return self.getTypedRuleContext(LanguageParser.UnionFieldContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_unionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionDeclaration" ):
                listener.enterUnionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionDeclaration" ):
                listener.exitUnionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionDeclaration" ):
                return visitor.visitUnionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def unionDeclaration(self):
